--- a/index.html
+++ b/index.html
@@ -6,15 +6,34 @@
     <title>Meteo App</title>
   </head>
   <body>
-    <h1>Welcome to the Meteo App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city.." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Tuesday 14:49, scattered clouds
+          <br />
+          Humidity: 66%, Wind: 3.13km/h
+        </p>
+      </div>
+      <div>🌤️ 12°C</div>
+    </main>
+
     <footer>
-      Coded by
+      This project was coded by
       <a href="https://github.com/matthieua/" target="_blank"> Matt Delac</a>,
-      code hosted on
-      <a href="https://github.com/matthieua/meteo" target="_blank">GitHub</a>
-      and website hosted
+      is
+      <a href="https://github.com/matthieua/meteo" target="_blank"
+        >open-sourced on GitHub</a
+      >
+      and
       <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
-        >on Netlify</a
+        >hosted on Netlify</a
       >
     </footer>
   </body>
